UI: Se terminan pruebas de UX

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ html {
 	font-size: 10px;
 	box-sizing: border-box;
 	scroll-behavior: smooth;
+	height: 100%;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
 }
 
 body {
@@ -28,6 +32,10 @@ body {
 	padding: 0;
 	background-color: var(--dark-green);
 	color: var(--light-color);
+	height: 100%;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
 }
 
 /* HTML: <div class="loader"></div> */
@@ -38,12 +46,12 @@ body {
 	font-weight: bold;
 	text-transform: uppercase;
 	color: #0000;
-	-webkit-text-stroke: 1px #000;
-	background: radial-gradient(0.71em at 50% 1em, #000 99%, #0000 101%) calc(50% - 1em) 1em/2em 200% repeat-x text, radial-gradient(0.71em at 50% -0.5em, #0000 99%, #000 101%) 50% 1.5em/2em 200% repeat-x text;
+	-webkit-text-stroke: 1px var(--light-color);
+	background: radial-gradient(0.71em at 50% 1em, #bc4749 99%, #bc4749 101%) calc(50% - 1em) 1em/2em 200% repeat-x text, radial-gradient(0.71em at 50% -0.5em, #0000 99%, #000 101%) 50% 1.5em/2em 200% repeat-x text;
 	animation: l10-0 0.8s linear infinite alternate, l10-1 4s linear infinite;
 }
 .loader:before {
-	content: "Loading";
+	content: "Cargando";
 }
 @keyframes l10-0 {
 	to {
@@ -63,6 +71,7 @@ body {
 	align-items: center;
 	height: 100vh;
 	padding: 0.4rem;
+	overflow-x: auto;
 }
 
 .flex-column {
@@ -96,6 +105,7 @@ body {
 
 .container-content {
 	width: auto;
+	overflow: auto;
 }
 
 .d-none {
@@ -258,10 +268,20 @@ body {
 	}
 }
 
+#mainPage {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	overflow: auto; /* Permite el desplazamiento si el contenido es demasiado grande */
+}
+
 .gifts-container {
 	display: flex;
+	flex-direction: row;
 	flex-wrap: wrap;
-	gap: 5rem;
+	gap: 2rem;
 	justify-content: center;
 	align-items: center;
 }
